--- a/src/App.css
+++ b/src/App.css
@@ -1,33 +1,37 @@
-.App {
-  text-align: center;
-}
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
-  pointer-events: none;
-}
+ * {
+   box-sizing: border-box;
+   margin: 0;
+   padding: 0;
+   background-color: rgb(245, 245, 245);
+ }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+ body {
+   font-family: Arial, Helvetica, sans-serif;
+   line-height: 1.4;
+ }
+
+ a {
+   color: black;
+   text-decoration: none;
+ }
+
+ table {
+   table-layout: fixed;
+ }
+
+.children {
+  display: table-cell;
+  border-radius: 10px;
+  background-color: black;
   color: white;
+  width: 45px;
+  text-align: center;
+  font-size: 1.5rem;
 }
 
-.App-link {
-  color: #61dafb;
-}
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.input_container {
+  width: 100%;
+  box-align: center;
 }
