--- a/src/App.css
+++ b/src/App.css
@@ -3,7 +3,7 @@
    box-sizing: border-box;
    margin: 0;
    padding: 0;
-   background-color: rgb(245, 245, 245);
+   background-color: transparent;
  }
 
  body {
@@ -16,9 +16,6 @@
    text-decoration: none;
  }
 
- .sidebar {
-   background-color: grey;
-   width: 40%;
-   height: 100%;
- }
-
+h1 {
+  background-color: transparent;
+}
