Added pages functionality

--- a/src/components/sidebar/sidebar.module.css
+++ b/src/components/sidebar/sidebar.module.css
@@ -1,17 +1,92 @@
 .sidebar {
-    display: grid;
-    background-color: rgba(50,50,50,1);
-    position: absolute;
-    width: 25%;
-    top: 0;
-    bottom: 0;
-    box-shadow: 1px 0px 10px rgba(0,0,0,1);
+  background-color: rgba(50,50,50,1);
+  position: absolute;
+  width: 25%;
+  top: 0;
+  bottom: 0;
+  box-shadow: 1px 0px 10px rgba(0,0,0,1);
+  grid-template-rows: auto auto auto auto auto auto;
 }
- 
-  .box {
-    display: inline-grid;
-    background-color: red;
-    text-align: center;
-    position: absolute;
-    left: 50%;
-  }
+
+.eachPage {
+  background-color: rgba(35,35,35,1);
+  box-shadow: 0px 1px 2px 2px rgba(0,0,0,1);
+  align-content: center;
+  color: rgba(245,245,245,1);
+  padding: 16px;
+  font-size: smaller;
+  border: none;
+  cursor: pointer;
+  width: 100%;
+  height: 15%;
+  outline: none!important;
+  text-align: center;
+}
+
+.dropbtn {
+  background-color: rgba(75,75,75,1);
+  align-content: center;
+  color: rgba(245,245,245,1);
+  padding: 16px;
+  font-size: 16px;
+  border: none;
+  cursor: pointer;
+  width: 100%;
+  height: 20%;
+  outline: none!important;
+}
+
+.dropdown {
+  position: relative;
+  display: inline-block;
+  width: 100%;
+  height: 20%;
+  align-content: center;
+}
+
+.dropdownContent {
+  display: none;
+  position: relative;
+  background-color: rgba(60,60,60,1);
+  width: 50%;
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  margin: 0 auto;
+  z-index:99;
+}
+
+.dropdownContent button {
+  display: absolute;
+  background-color: rgba(60,60,60,0.75);
+  color: rgba(220,220,220,1);
+  padding: 16px;
+  font-size: 16px;
+  border: none;
+  cursor: pointer;
+  width: 100%;
+  height: 20%;
+  outline: none!important;
+  font-size: 10px;
+  z-index: 0;
+}
+
+.dropdownContent button:hover {
+  background-color: rgba(60,0,60,1)}
+
+.dropdown:hover .dropdownContent {
+  display: block;
+  position: absolute;
+  margin-left: 25%;
+  z-index: 10;
+}
+
+
+.dropdown:hover .dropbtn {
+  background-color: rgba(75,75,75,1);
+}
+
+.scroll {
+  height: 300px;
+  box-shadow: inset 0px 0px 10px rgba(0,0,0,0.5);
+  overflow-y: scroll;
+  overflow: auto;
+}
