--- a/src/components/sidebar/sidebar.module.css
+++ b/src/components/sidebar/sidebar.module.css
@@ -34,6 +34,7 @@
   width: 100%;
   height: 20%;
   outline: none!important;
+  box-shadow: 0px 1px 2px rgba(0,0,0,1);
 }
 
 .dropdown {
@@ -85,8 +86,53 @@
 }
 
 .scroll {
-  height: 300px;
-  box-shadow: inset 0px 0px 10px rgba(0,0,0,0.5);
+  height: 309px;
+  box-shadow: inset 0px 0px 20px rgba(0,0,0,0.5);
   overflow-y: scroll;
   overflow: auto;
+}
+
+.sideButtons {
+  background-color: rgba(85,85,85,1);
+  align-content: center;
+  color: rgba(245,245,245,1);
+  padding: 16px;
+  font-size: 10px;
+  border: none;
+  cursor: pointer;
+  width: 60%;
+  height: 20%;
+  left: 20%;
+  margin-top: 10%;
+  outline: none!important;
+  box-shadow: 0px 0px 3px rgba(0,0,0,1);
+  transform: translate(50,50);
+  position: relative;
+}
+
+.addButton {
+  background-color: rgba(85,85,85,1);
+  align-content: center;
+  color: rgba(245,245,245,1);
+  padding: 16px;
+  font-size: 10px;
+  border: none;
+  cursor: pointer;
+  width: 25%;
+  height: 20%;
+  left: 5%;
+  margin-top: 10%;
+  outline: none!important;
+  box-shadow: 0px 0px 3px rgba(0,0,0,1);
+  transform: translate(50,50);
+  position: relative;
+}
+
+.addNode {
+  width: 30%;
+  margin-left: 20%;
+  outline: none!important;
+  color: rgba(245,245,245,1);
+  align-content: center;
+  font-size: 12px;
 }
